welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  
    if (!isFacingWall){
    	forward()
    }
 
  	if (isOverBaggle()){
      	pickupBaggle()
				draw()
        return
    }
  
    while (!isFacingTrail()){
      left()
    }
  
		draw()
  	hunt
}

 // here comes your isFacingTrail method